# fluxura

./: Dockerfile  README.md  celeryconfig.py  docker-compose.yml  pyproject.toml
__garbage/: celeryconfig.py  fattura_elettronica.py  fattura_pipeline.py
docs/: architecture.md
k8s/: configmap.yaml  flower.yaml  namespace.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml  worker.yaml
scripts/docker/: install.sh  uninstall.sh
scripts/k8s/: deploy.sh  teardown.sh
src/fluxura/: __init__.py  celery_app.py  config.py
src/fluxura/domain/: models.py
src/fluxura/infrastructure/: db.py  repository.py
src/fluxura/pipeline/: tasks.py
src/fluxura/pipeline/workflows/: airflow_dag.py  prefect_flow.py
src/fluxura/services/: calculation.py  extraction.py  pec_sender.py  verification.py  xml_generation.py
tests/: test_pr_regressions.py
