[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxura"
version = "0.1.0"
description = "Pipeline distribuita e verificabile per fatturazione elettronica"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.4.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg>=3.1.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "lxml>=5.0.0",
  "prefect>=2.16.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
